<resources>
<!-- English -->
    <string name="app_name">Pixplorer</string>
    
<!--  search  -->
    <string name="speak_now">Speak now</string>
    
<!--  Drawer  -->
	<string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="quest">Quest</string>
    <string name="trophy">Trophy</string>
    <string name="highscore">Highscore</string>
    <string name="setting">Settings</string>
    <string name="pref">Preferences</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    
<!--  Details  -->
    <string name="wiki">Wikipedia Entry</string>
    <string name="points">Reward for this:</string>
    
    
    
<!-- LOGIN -->
	<string name="login">Login</string>
	<string name="pleaseLogin">Please Login</string>
	<string name="login_neccessary">You need to login with Google+ in order to use the Gameservice of this app</string>	 
	<string name="signin_failure">SignIn failed</string>
	<string name="signin_other_error">SignIn error</string>
	
	<string name="pleasechooseCategoryTitle">Choose Your Gamemode</string>
	<string name="pleasechooseCategoryMsg">Tourist: gets only easy Places and Sights.\n\nLocal: gets all available Places.\n\nYou can change this anytime in your Settings.</string>
	<string name="chooseTourist">Tourist</string>
	<string name="chooseLocal">Local</string>
	
<!-- Achievments and Leadboards -->	
	<string name="achievement">Achievement</string>
	<string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    
<!-- Setting Screen -->    
    <string name="preferences_general">General</string>
    <string name="title_gamemode">Game Mode</string>
    <string name="summary_gamemode">Your selected gamemode is:</string>
    <string name="preferences_about">About</string>
    <string name="title_developer">Developer</string>
    <string name="summary_developer">Appjunkies</string>
    <string name="preferences_clean">Clean</string>
    <string name="title_cache">Clear Cache</string>
    <string name="summary_cache">Clear the image cache of the app</string>
    <string name="version">Version</string>
	<string name="clearcacheTitle">Clear Cache</string>
    <string name="clearcacheMsg">This operation cleares all the cached Images of this app. Loading may take longer next time you use the app.\nContinue?</string>
  
<!-- GPS dialog -->   
    <string name="enable_GPS_msg">"It seems that your GPS is turned off. Turn it on now?"</string>
    <string name="enable_GPS">"GPS not enabled"</string>
    <string name="enable_GPS_net_msg">"It seems that your Internet and GPS are off. Turn it on now?"</string>
    <string name="enable_GPS_net">"GPS and Network not enabled"</string>
    
<!-- Profile -->   
    <string name="avaiable_place">Places</string>
    <string name="searching">To Search</string>
    <string name="found">Found</string>   
    

</resources>
