<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

 <PreferenceCategory 
        android:key="categorygeneral"
        android:title="@string/preferences_general" >
        <ListPreference
            android:title="@string/title_gamemode"
            android:key="gameMode"
            android:defaultValue="2"
            android:entries="@array/gameModes"
            android:entryValues="@array/gameModesValues" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preferences_clean" >
<!--         <Preference -->
<!--             android:key="reset" -->
<!--             android:summary="@string/summary_reset" -->
<!--             android:title="@string/title_reset" /> -->
        <Preference
            android:key="clearcache"
            android:summary="@string/summary_cache"
            android:title="@string/title_cache" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_about" >

        <PreferenceScreen
            android:summary="@string/summary_developer"
            android:title="@string/title_developer" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/u/0/+EmmeP%C3%B6rni/about" />
        </PreferenceScreen>

       	<appjunkies.pixplorer.other.VersionPreference android:title="@string/version" />
        
    </PreferenceCategory>

    <!--
         <PreferenceCategory
            android:title="@string/launch_preferences">

       <PreferenceScreen
                android:key="screen_preference"
                android:title="@string/title_screen_preference"
                android:summary="@string/summary_screen_preference">
            
           
         <CheckBoxPreference
                    android:key="next_screen_checkbox_preference"
                    android:title="@string/title_next_screen_toggle_preference"
                    android:summary="@string/summary_next_screen_toggle_preference" />
                
        </PreferenceScreen>

        <PreferenceScreen
                android:title="@string/title_intent_preference"
                android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://developer.android.com/" />

        </PreferenceScreen>

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/preference_attributes">
    
        <CheckBoxPreference
                android:key="parent_checkbox_preference"
                android:title="@string/title_parent_preference"
                android:summary="@string/summary_parent_preference" />

        
    <CheckBoxPreference
                android:key="child_checkbox_preference"
                android:dependency="parent_checkbox_preference"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_child_preference"
                android:summary="@string/summary_child_preference" />
            
    </PreferenceCategory>
    -->

</PreferenceScreen>