<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vUserProfileRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    >

    <LinearLayout
        android:padding="24dp"
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivUserProfilePhoto"
            android:layout_width="@dimen/user_profile_avatar_size"
            android:layout_height="@dimen/user_profile_avatar_size"
            android:layout_marginRight="16dp" />

        <LinearLayout
            android:id="@+id/vUserDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"
                android:textColor="#bbbbbb" />

            <TextView
                android:id="@+id/userGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text=""
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnHighscore"
                android:layout_width="match_parent"
                android:background="@drawable/btn_following"
                android:textColor="#ffffff"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:textSize="12sp"
                android:text="" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vUserStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avaiable_place"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/searching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searching"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >
        <fragment
            android:id="@+id/map"
            xmlns:map="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:name="com.google.android.gms.maps.MapFragment"

            tools:ignore="MissingPrefix"
            map:uiRotateGestures="false"
            map:uiScrollGestures="false"
            map:uiTiltGestures="false"
            map:uiZoomControls="false"
            map:uiZoomGestures="false"/>

    </FrameLayout>
</LinearLayout>
